--- a/html/Tema1_1.html
+++ b/html/Tema1_1.html
@@ -6,25 +6,29 @@
     <title>Tema 1.1</title>
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
-<body bgcolor="#00FFFF">
-    <center><h1>Visión General del Proceso de Ingeniería de Software</h1></center>
-    <center><h2>Material</h2></center>
-    <center><p>Temas relacionado con la visión general del proceso de ingeniería de software</p></center>
+<body>
+  
+        <h1>Visión General del Proceso de Ingeniería de Software</h1>
+        <h2>Material</h2>
+        <p>Temas relacionados con la visión general del proceso de ingeniería de software</p>
+ 
     <center><embed src="../documents/Tema1_1.pdf" width="600" height="500" type="application/pdf"></center>
-    <h3>¿Cómo debemos de pensar?</h3>
+    <h3 class="encabezado">¿Cómo debemos de pensar?</h3>
+    <div class="parent">
     <ul>
         <li>Como si fuésemos el usuario</li>
         <li>Como si fuésemos el administrador</li>
         <li>Como si fuésemos los desarrolladores</li>
         <li>Como si fuésemos los encargados de prueba y error</li>
-    </ul> 
-    <h3>Consejos para el desarrollo de software</h3>
+    </ul>  
+    </div>
+    <h3 class="encabezado">Consejos para el desarrollo de software</h3>
     <p>
         Elaborar un plan de trabajo (alcances, objetivos,
         cronograma, limitaciones, presupuesto, tiempos de 
         entrega, los riesgos, recursos humanos, etc)
     </p>
-    <h3>Consejo</h3> 
+    <h3 class="encabezado">Consejo</h3> 
     <p>
         "El trabajo en equipo no significa que todos hagan todo. Significa que todos hagan lo que hacen mejor“
     </p>    
