--- a/html/Tema1_2.html
+++ b/html/Tema1_2.html
@@ -6,21 +6,23 @@
     <title>Tema 1.2</title>
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
-<body bgcolor="#00FFFF">
+<body>
     <center><h1>Requerimientos</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con la ingeniería de requerimientos</p></center>
     <center><embed src="../documents/Tema 1.2.pdf" width="600" height="500" type="application/pdf"></center>
-    <h3>¿Qué es un requisito?</h3> 
+    <h3 class="encabezado">¿Qué es un requisito?</h3> 
     <p>
         Condiciones necesarias para algo
     </p>   
-    <h3>Obtención de requisitos</h3>
+    <h3 class="encabezado">Obtención de requisitos</h3>
+    <div class="parent">
     <ul>
         <li>Entrevistas</li>
         <li>Pláticas</li>
     </ul> 
-    <h3>Consejo</h3> 
+    </div>
+    <h3 class="encabezado">Consejo</h3> 
     <p>
         "Los requisitos son como los ladrillos de tu proyecto; 
         construye con cuidado y verás un edificio sólido de éxito de otro modo tu edificio caerá"
