--- a/html/Tema1_3.html
+++ b/html/Tema1_3.html
@@ -6,18 +6,19 @@
     <title>Tema 1.3</title>
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
-<body bgcolor="#00FFFF">
+<body>
     <center><h1>Arquitectura</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con la arquitectura de software</p></center>
     <center><embed src="../documents/Tema 1.3.pdf" width="600" height="500" type="application/pdf"></center>
-    <h3>Estilo arquitectónico de tubos y filtros</h3> 
+    <h3 class="encabezado">Estilo arquitectónico de tubos y filtros</h3> 
     <p>
-        Estilo arquitectónico en el que los datos fluyen 
+        Estilo arquitectónico en el que los datos fluyen  
         a través de una secuencia de componentes de procesamiento 
         llamados "filtros" conectados por "tubos".
     </p>   
-    <h3>¿Qué son los tubos y filtros?</h3> 
+    <h3 class="encabezado">¿Qué son los tubos y filtros?</h3> 
+    <div class="parent">
     <ul>
         <li>Tubos: Son canales de comunicación que conectan los filtros.</li>
         <li>Filtros: Componentes de procesamiento independientes que 
@@ -25,6 +26,7 @@
             los resultados al siguiente filtro o al tubo de salida.
         </li>
     </ul> 
+    </div>
     <h2>Videos</h1>
     <center>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/n6XvfUG4QBQ?si=SlG1zjOqoX4bQRpJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
