--- a/html/Tema1_4.html
+++ b/html/Tema1_4.html
@@ -6,27 +6,27 @@
     <title>Tema 1.4</title>
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
-<body bgcolor="#00FFFF">
+<body>
     <center><h1>Patrones de Diseño</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con el patrón de diseño</p></center>
     <center><embed src="../documents/Tema 1.4.pdf" width="600" height="500" type="application/pdf"></center>
-    <h3>¿Arquitectura o patrones de diseño?</h3> 
+    <h3 class="encabezado">¿Arquitectura o patrones de diseño?</h3> 
     <p>
         A diferencia de la arquitectura la cual se 
         centra más en un panorama general del proyecto, 
         los patrones de diseño están más enfocados a cómo 
         mejorar la programación.
     </p>  
-    <h3>¿A qué te refieres con mejorar?</h3> 
+    <h3 class="encabezado">¿A qué te refieres con mejorar?</h3> 
     <p>
         Con el pasar de años se encontraron problemas 
         en los proyectos de software que se repiten 
         constantemente de ahí surgen estos patrones de 
         diseño que están aprobados y resuelven problemas 
-        recurrentes.
+        recurrentes. 
     </p>  
-    <h3>Dato curioso</h3> 
+    <h3 class="encabezado">Dato curioso</h3> 
     <p>
         MVC no es un patrón de diseño, es más una arquitectura 
         porque separa el código en distintas responsabilidades
