--- a/html/Tema2_1.html
+++ b/html/Tema2_1.html
@@ -6,18 +6,18 @@
     <title>Tema 2.1</title>
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
-<body bgcolor="#00FFFF">
+<body>
     <center><h1>Bases de Datos Relacionales</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con las bases de datos relacionales</p></center>
     <center><embed src="../documents/Tema 2.1.pdf" width="600" height="500" type="application/pdf"></center>
-    <h3>Primera forma normal</h3> 
+    <h3 class="encabezado">Primera forma normal</h3> 
     <p>
         En cada una de las columnas de las tablas 
         solo se puede tener 1 valor y no puede a ver 
         grupos de repetición
     </p> 
-    <h3>Segunda forma normal</h3> 
+    <h3 class="encabezado">Segunda forma normal</h3> 
     <ul>
         <li>Cualquier campo no clave debería
             ser dependiente de toda la clave primaria </li>
@@ -26,20 +26,20 @@
             solo tiene una columna automáticamente ya está en 
             2FN)</li>
     </ul> 
-    <h3>Tercera forma normal</h3> 
+    <h3 class="encabezado">Tercera forma normal</h3> 
     <p>
         Ningún campo no clave depende de ningún 
         otro campo no clave
     </p> 
     <center><h2>Ejemplo de Primera Forma Normal</h2>
-    <img src="../img/1.png" alt="No esta en primera forma normal" width="500" height="300">
-    <img src="../img/2.png" alt="Si esta en primera forma normal" width="500" height="300">
+    <img src="../img/1.png" alt="No esta en primera forma normal" width="500" height="300" class="imagen">
+    <img src="../img/2.png" alt="Si esta en primera forma normal" width="500" height="300" class="imagen">
     <h2>Ejemplo de Segunda Forma Normal</h2>
-    <img src="../img/3.png" alt="No esta en segunda forma normal" width="500" height="300">
-    <img src="../img/4.png" alt="Si esta en segunda forma normal" width="500" height="300">
+    <img src="../img/3.png" alt="No esta en segunda forma normal" width="500" height="300" class="imagen">
+    <img src="../img/4.png" alt="Si esta en segunda forma normal" width="500" height="300" class="imagen">
     <h2>Ejemplo de Tercera Forma Normal</h2>
-    <img src="../img/5.png" alt="No esta en tercera forma normal" width="500" height="300">
-    <img src="../img/6.png" alt="Si esta en tercera forma normal" width="500" height="300">
+    <img src="../img/5.png" alt="No esta en tercera forma normal" width="500" height="300" class="imagen">
+    <img src="../img/6.png" alt="Si esta en tercera forma normal" width="500" height="300" class="imagen">
     </center>
     <table width="100%">
         <tr>
