--- a/html/Tema2_2.html
+++ b/html/Tema2_2.html
@@ -30,19 +30,19 @@
         }
     </style>
 </head>
-<body bgcolor="#00FFFF">
+<body>
     <center><h1>SQL</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con SQL</p></center>
     <center><embed src="../documents/Tema 2.2.pdf" width="600" height="500" type="application/pdf"></center>
-    <h3>Concepto de índice</h3> 
+    <h3 class="encabezado">Concepto de índice</h3> 
     <p>
         Estructura especial diseñada para mejorar la 
         velocidad de recuperación y búsqueda de datos 
         en una tabla. Funciona de manera similar a un 
         índice en un libro.
     </p> 
-    <h3>Procedimientos</h3> 
+    <h3 class="encabezado">Procedimientos</h3> 
     <ul>
         <li>Un conjunto de instrucciones o un programa almacenado en la base 
             de datos que realiza una tarea específica o una serie de tareas 
