--- a/html/Tema2_3.html
+++ b/html/Tema2_3.html
@@ -6,10 +6,10 @@
     <title>Tema 2.3</title>
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
-<body bgcolor="#00FFFF">
+<body>
     <center><h1>Triggers</h1></center>
     <center><h2>Material</h2></center>
-    <p>Temas relacionados con los triggers</p>
+    <center><p>Temas relacionados con los triggers</p></center>
     <center><embed src="../documents/Tema 2.3.pdf" width="600" height="500" type="application/pdf"></center>
     <h2>Videos</h2>
     <center>
@@ -19,11 +19,11 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/d6Vm5LRSMYM?si=LiHlbUF54Ez_qb95" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </center>
     <center><h2>Tablas de la Base de Datos</h2>
-        <img src="../img/8.png" alt="Tablas" width="300" height="300">
+        <img src="../img/8.png" alt="Tablas" width="300" height="300" class="imagen">
         <h2>Creación de Triggers</h2>
-        <img src="../img/7.png" alt="Triggers" width="1000" height="300">
+        <img src="../img/7.png" alt="Triggers" width="1000" height="300" class="imagen">
         <h2>Triggers Creados</h2>
-        <img src="../img/9.png" alt="Triggers creados" width="500" height="300">
+        <img src="../img/9.png" alt="Triggers creados" width="500" height="300" class="imagen">
     </center>
     <table width="100%">
         <tr>
