--- a/html/Tema2_6.html
+++ b/html/Tema2_6.html
@@ -6,17 +6,17 @@
     <title>Tema 2.6</title>
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
-<body bgcolor="#00FFFF">
+<body>
     <center><h1>API</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas Relacionados con las Apis</p></center>
     <center><embed src="../documents/Tema 2.6.pdf" width="600" height="500" type="application/pdf"></center>
-    <h3>FRONTEND VS BACKEND</h3>
+    <h3 class="encabezado">FRONTEND VS BACKEND</h3>
     <p>El frontend se encarga de la interfaz y la 
         experiencia del usuario en una aplicación web, 
         mientras que el backend se encarga de la lógica, 
         el procesamiento y la gestión de datos en el servidor.</p> 
-    <h3>Concepto de Api (mediante boxeo)</h3>
+    <h3 class="encabezado">Concepto de Api (mediante boxeo)</h3>
     <p>
         Frontend (Boxeador en el Ring): Imaginemos que 
         el frontend es como un boxeador en el ring. Este 
@@ -32,7 +32,7 @@
         orientación y lógica para que el boxeador (frontend) 
         pueda pelear eficazmente.
     </p> 
-    <h3>Comunicación mediante apis</h3> 
+    <h3 class="encabezado">Comunicación mediante apis</h3> 
     <p>
         API (Instrucciones entre Rounds): En el boxeo, entre 
         rounds, el entrenador puede dar instrucciones al boxeador, 
