--- a/html/formulario.html
+++ b/html/formulario.html
@@ -72,9 +72,12 @@
 
     <script>
         function limpiarFormulario() {
-            document.getElementById("registro-form").reset();
+            var formulario = document.getElementById("registro-form");
+            formulario.reset();
+            
         }
     </script>
    <p>______________________________________________________________________________________________________________________</p> 
 </body>
 </html>
+
