--- a/html/Tema2_4.html
+++ b/html/Tema2_4.html
@@ -6,29 +6,33 @@
     <title>Tema 2.4</title>
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
-<body bgcolor="#00FFFF" >
+<body>
     <center><h1>Programación Orientada a Objetos</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con la programación orientada a objetos</p></center>
     <center><embed src="../documents/Tema 2.4.pdf" width="600" height="500" type="application/pdf"></center>
-    <h3>Concepto de clase</h3>
+    <h3 class="encabezado">Concepto de clase</h3>
     <p>Es mi molde en donde tendremos los atributos y métodos generales
         Los atributos son sus características y los métodos cómo se comportan
         Por ejemplo un cubo de Minecraft será nuestra clase o plantilla.
         Puede tener atributos como: nombre, textura y dimensión.
     </p> 
-    <h3>Concepto de Objeto</h3>
+    <h3 class="encabezado">Concepto de Objeto</h3>
+    <div class="parent">
     <ul>
         <li>Instancia de una clase.</li>
         <li>Podemos crear muchos objetos que deriven de la clase creada.</li>
     </ul> 
-    <h3>Definición formal</h3> 
+    </div>
+    <h3 class="encabezado">Definición formal</h3> 
+    <div class="parent">
     <ul>
         <li>Abstracción (De lo particular a lo general).</li>
         <li>Encapsulamiento (Acceso a datos).</li>
         <li>Polimorfismo (Mismo método, respuestas diferentes).</li>
         <li>Herencia (Lo que podemos pasar a otros objetos)</li>
     </ul> 
+    </div>
     <h2>Videos</h2>
     <center>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/AAKoccH230Y?si=aDNwbqCAMilffYCh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
