--- a/html/Tema2_5.html
+++ b/html/Tema2_5.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body>
-    <center><h1>Práctica de Java y MySQL</h1></center>
+    <center><h1>Práctica de Java con MySQL</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Práctica de Java con Mysql</p></center>
     <center><embed src="../documents/Tema 2.5.pdf" width="600" height="500" type="application/pdf"></center>
