--- a/html/formulario.html
+++ b/html/formulario.html
@@ -16,6 +16,7 @@
 
         label {
             display: block;
+            color: #fff;
             margin-bottom: 5px;
         }
 
@@ -24,18 +25,21 @@
         input[type="number"] {
             width: 100%;
             padding: 10px;
+            color:#fff;
             margin-bottom: 10px;
-            border: 1px solid #ccc;
+            background-image: linear-gradient(to bottom, #343638, #0c0a11);
+            border: 1px solid #dbd1d1;
             border-radius: 4px;
         }
 
         input[type="button"] {
-            background-color: #007bff;
+            background-image: linear-gradient(to bottom, #343638, #0c0a11);
             color: #fff;
             border: none;
             padding: 10px 20px;
             border-radius: 4px;
             cursor: pointer;
+            text-align: center;
         }
 
         input[type="button"]:hover {
@@ -44,10 +48,28 @@
         .invisible {
             display: none;
         }
+        .titulo {
+            /*font-size: 36px;*/
+            color: #fff;
+            background-image: linear-gradient(to bottom, #343638, #0c0a11);
+            text-transform: uppercase;
+            max-width: max-content;
+            /*text-align: center;*/
+            padding: 10px;
+            border: 2px solid #051b31;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+        .parent{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+}
     </style>
 </head>
 <body>
-    <center><h1>Registrarse</h1></center>
+    <center><h1 class="titulo">Registrarse</h1></center>
     <form id="registro-form">
         <label for="nombre">Nombre Completo:</label>
         <input type="text" id="nombre" name="nombre" required>
@@ -66,8 +88,9 @@
 
         <label for="promedio">Promedio General:</label>
         <input type="number" id="promedio" name="promedio" step="0.01" required>
-
+        <div class="parent">
         <input type="button" value="Enviar" onclick="limpiarFormulario()">
+        </div>
     </form>
 
     <script>
@@ -77,7 +100,7 @@
             
         }
     </script>
-   <p>______________________________________________________________________________________________________________________</p> 
+   <p>_________________________________________________________________________________________________________________________________</p> 
 </body>
 </html>
 
