terminando el css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="index.html" >Página de inicio</a></li>
             <li><a href="html/formulario.html" onclick="cargarContenido(this); return false;">Registrarse</a></li>
-            <li><a href="https://www.facebook.com/MagdiChiCanul" target="_blank"><span><img src="img/logoface.png" alt="Visita mi perfil de facebook" width=25px height=25px style="display: inline" >Visita mi perfil de facebook</span></a></li>
+            <li><a href="https://www.facebook.com/MagdiChiCanul" target="_blank"><span><img src="img/logoface.png" alt="Visita mi perfil de facebook" width="25px" height="25px" style="vertical-align: middle;" >Visita mi perfil de facebook</span></a></li>
             
         </ul>
     </nav>
@@ -50,7 +50,6 @@
                 <center><img src="img/logocelulas.png" alt="Imagen Derecha" class="img2"></center>
                 <center><p class="informacion">Información de contacto</p></center>
                 <center><p class="informacion">Tel: 996-111-5891</p></center>
-                <center><p class="informacion">Correo electrónico: fernandomagdiel2@gmail.com</p></center>
                 <center><p class="informacion">Correo electrónico: fernandomagdiel2@gmail.com</p></center>
                 
             </div>
